# fx-hedging-simulator

./: .gitignore  Casestudy_Data.xlsx  FX_Hedging_Calculations.xlsx  README.md  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: data_loader.py  excel_export.py  fx_core.py  main.py  pricing.py  strategies.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BinomialTree.jsx  Charts.jsx  ControlPanel.jsx  KPISection.jsx  StrategyDetails.jsx
