[project]
name = "fx-hedging-simulator"
version = "1.0.0"
# Pinned to 3.12: pandas 2.1.4 / numpy 1.26.4 ship no cp313+ wheels, so any
# newer interpreter forces a source build that fails against the 3.13+ C API.
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.1.8",
    "et_xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "fastapi==0.128.8",
    "h11==0.16.0",
    "idna==3.18",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas==2.1.4",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "six==1.17.0",
    "starlette==0.49.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.16.0",
    "tzdata==2026.2",
    "uvicorn==0.39.0",
]
